Fix assessment date field truncation and horizontal alignment; (#204)
* Fix assessment date field truncation and horizontal alignment;

* Use rem units for assessment date field style updates;

--- a/app/javascript/Application/components/Assessment/style.sass
+++ b/app/javascript/Application/components/Assessment/style.sass
@@ -28,6 +28,16 @@
   justify-content: space-between
   width: 100%
 
+.assessment-form-header-inputs
+  > div 
+    padding-left: .5rem
+    padding-right: .5rem  
+
+.assessment-form-header-inputs
+  > div:first-child 
+    padding-left: 1.5rem
+    padding-right: .5rem  
+
 .form-control 
     line-height: 2rem
     padding: .1rem .75rem
